--- a/midis.muchik.market.application/midis.muchik.market.application.csproj
+++ b/midis.muchik.market.application/midis.muchik.market.application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\midis.muchik.market.domain\midis.muchik.market.domain.csproj" />
   </ItemGroup>
 
