--- a/midis.muchik.market.api/appsettings.json
+++ b/midis.muchik.market.api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MuchikConnection": "Data Source=localhost; Initial Catalog=muchik; User Id=sa; Password=NewHorizons_2023@;TrustServerCertificate=True"
+    "MuchikConnection": "Data Source=muchik-mssql; Initial Catalog=muchik; User Id=sa; Password=NewHorizons_2023@;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
