--- a/midis.muchik.market.api/appsettings.json
+++ b/midis.muchik.market.api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "MuchikConnection": "Data Source=muchik-mssql; Initial Catalog=muchik; User Id=sa; Password=NewHorizons_2023@;TrustServerCertificate=True"
+    "MuchikMsSql": "Data Source=muchik-mssql; Initial Catalog=muchik; User Id=sa; Password=NewHorizons_2023@;TrustServerCertificate=True",
+    "MuchikMySql": "server=muchik-mysql; database=muchik; port=3306; user=root; password=NewHorizons_2023@"
   },
   "Logging": {
     "LogLevel": {
