--- a/midis.muchik.market.api/appsettings.json
+++ b/midis.muchik.market.api/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "MuchikMsSql": "Data Source=muchik-mssql; Initial Catalog=muchik; User Id=sa; Password=NewHorizons_2023@;TrustServerCertificate=True",
-    "MuchikMySql": "server=muchik-mysql; database=muchik; port=3306; user=root; password=NewHorizons_2023@"
+    "MuchikMsSql": "Data Source=localhost; Initial Catalog=muchik; User Id=sa; Password=NewHorizons_2023@;TrustServerCertificate=True",
+    "MuchikMySql": "server=localhost; database=muchik; port=3306; user=root; password=NewHorizons_2023@",
+    "MuchikPgMySql": "Server=localhost; Database=muchik; Port=5432; user=postgres; password=NewHorizons_2023@"
   },
   "Logging": {
     "LogLevel": {
