--- a/midis.muchik.market.application/midis.muchik.market.application.csproj
+++ b/midis.muchik.market.application/midis.muchik.market.application.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\midis.muchik.market.cross-cutting\midis.muchik.market.crosscutting.csproj" />
     <ProjectReference Include="..\midis.muchik.market.domain\midis.muchik.market.domain.csproj" />
   </ItemGroup>
 
