--- a/midis.muchik.market.api/appsettings.json
+++ b/midis.muchik.market.api/appsettings.json
@@ -2,7 +2,13 @@
   "ConnectionStrings": {
     "MuchikMsSql": "Data Source=localhost; Initial Catalog=muchik; User Id=sa; Password=NewHorizons_2023@;TrustServerCertificate=True",
     "MuchikMySql": "server=localhost; database=muchik; port=3306; user=root; password=NewHorizons_2023@",
-    "MuchikPgMySql": "Server=localhost; Database=muchik; Port=5432; user=postgres; password=NewHorizons_2023@"
+    "MuchikPgSql": "Server=localhost; Database=muchik; Port=5432; User Id=postgres; Password=NewHorizons_2023@"
+  },
+  "JwtConfig": {
+    "Issuer": "muchik.market.pe",
+    "Audience": "public",
+    "SecretKet": "NA3CwVHB0NrM1LzK0KHnG$FG_D2SA0Q2W3ERTYUIOP79889ZXMNCASGW64",
+    "Lifetime":  3600
   },
   "Logging": {
     "LogLevel": {
