--- a/midis.muchik.market.api/appsettings.json
+++ b/midis.muchik.market.api/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
-    "MuchikMsSql": "Data Source=localhost; Initial Catalog=muchik; User Id=sa; Password=NewHorizons_2023@;TrustServerCertificate=True",
-    "MuchikMySql": "server=localhost; database=muchik; port=3306; user=root; password=NewHorizons_2023@",
-    "MuchikPgSql": "Server=localhost; Database=muchik; Port=5432; User Id=postgres; Password=NewHorizons_2023@"
+    "MuchikMsSql": "Data Source=muchik-mssql; Initial Catalog=muchik; User Id=sa; Password=NewHorizons_2023@;TrustServerCertificate=True",
+    "MuchikMySql": "server=muchik-mysql; database=muchik; port=3306; user=root; password=NewHorizons_2023@",
+    "MuchikPgSql": "Server=muchik-pgsql; Database=muchik; Port=5432; User Id=postgres; Password=NewHorizons_2023@"
   },
   "JwtConfig": {
     "Issuer": "muchik.market.pe",
