--- a/midis.muchik.market.api/appsettings.json
+++ b/midis.muchik.market.api/appsettings.json
@@ -7,8 +7,13 @@
   "JwtConfig": {
     "Issuer": "muchik.market.pe",
     "Audience": "public",
-    "SecretKet": "NA3CwVHB0NrM1LzK0KHnG$FG_D2SA0Q2W3ERTYUIOP79889ZXMNCASGW64",
-    "Lifetime":  3600
+    "SecretKey": "NA3CwVHB0NrM1LzK0KHnG$FG_D2SA0Q2W3ERTYUIOP79889ZXMNCASGW64",
+    "Lifetime": 3600
+  },
+  "SendGridConfig": {
+    "MailFrom": "noreply@newhorizons.edu.pe",
+    "SecretKey": "SG",
+    "ForgetPasswordMailing": "mailings//forgetPassword.html"
   },
   "Logging": {
     "LogLevel": {
