--- a/midis.muchik.market.api/appsettings.json
+++ b/midis.muchik.market.api/appsettings.json
@@ -11,9 +11,10 @@
     "Lifetime": 3600
   },
   "SendGridConfig": {
-    "MailFrom": "noreply@newhorizons.edu.pe",
-    "SecretKey": "SG",
-    "ForgetPasswordMailing": "mailings//forgetPassword.html"
+    "MailFrom": "",
+    "SecretKey": "",
+    "ForgetPasswordMailing": "mailings//forgetPassword.html",
+    "ForgetPasswordUrl": "http://localhost:9205/muchik-market/security/forgetPassword?token=TOKEN_VALUE&username=EMAIL"
   },
   "Logging": {
     "LogLevel": {
