--- a/midis.muchik.market.api/appsettings.json
+++ b/midis.muchik.market.api/appsettings.json
@@ -11,8 +11,8 @@
     "Lifetime": 3600
   },
   "SendGridConfig": {
-    "MailFrom": "",
-    "SecretKey": "",
+    "MailFrom": "noreply@sodimac.com.pe",
+    "SecretKey": "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",
     "ForgetPasswordMailing": "mailings//forgetPassword.html",
     "ForgetPasswordUrl": "http://localhost:9205/muchik-market/security/forgetPassword?token=TOKEN_VALUE&username=EMAIL"
   },
