--- a/midis.muchik.market.cross-cutting/midis.muchik.market.crosscutting.csproj
+++ b/midis.muchik.market.cross-cutting/midis.muchik.market.crosscutting.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.13" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
+    <PackageReference Include="NLog" Version="5.2.6" />
     <PackageReference Include="SendGrid" Version="9.28.1" />
   </ItemGroup>
 
