--- a/midis.muchik.market.api/nlog.config
+++ b/midis.muchik.market.api/nlog.config
@@ -1,9 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿﻿<?xml version="1.0" encoding="utf-8" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Info"
-      internalLogFile="D:\muchik-market-log.txt">
+      internalLogFile="c:\temp\muchik-market-internal-iogs.txt">
 
 	<!-- enable asp.net core layout renderers -->
 	<extensions>
@@ -13,12 +13,24 @@
 	<!-- the targets to write to -->
 	<targets>
 		<!-- File Target for all log messages with basic details -->
-		<target xsi:type="File" name="allfile" fileName="c:\temp\nlog-AspNetCore-all-${shortdate}.log"
+		<target xsi:type="File" name="allfile" fileName="c:\temp\muchik-market-internal-all-${shortdate}.log"
 				layout="${longdate}|${event-properties:item=EventId:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}" />
 
 		<!-- File Target for own log messages with extra web details using some ASP.NET core renderers -->
-		<target xsi:type="File" name="ownFile-web" fileName="c:\temp\nlog-AspNetCore-own-${shortdate}.log"
-				layout="${longdate}|${event-properties:item=EventId:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
+		<!--<target xsi:type="File" name="ownFile-web" fileName="c:\temp\WebApiFsp-own-${shortdate}.log"
+           layout="${longdate}|${event-properties:item=EventId:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />-->
+		<target xsi:type="File" name="ownFile-web" fileName="c:\temp\muchik-market-internal-own-${shortdate}.log">
+			<layout xsi:type="JsonLayout" includeEventProperties="true">
+				<attribute name="time" layout="${longdate}" />
+				<attribute name="event" layout="${event-properties:item=EventId:whenEmpty=0}"/>
+				<attribute name="level" layout="${level:upperCase=true}"/>
+				<attribute name="logger" layout="${logger}"/>
+				<attribute name="message" layout="${message}" />
+				<attribute name="exception" layout="${exception:format=tostring}"/>
+				<attribute name="url" layout="${aspnet-request-url}" />
+				<attribute name="action" layout="${aspnet-mvc-action}" />
+			</layout>
+		</target>
 
 		<!--Console Target for hosting lifetime messages to improve Docker / Visual Studio startup detection -->
 		<target xsi:type="Console" name="lifetimeConsole" layout="${MicrosoftConsoleLayout}" />
